@@ -4,7 +4,7 @@ use strict;
 use warnings;
 
 package Mail::DKIM;
-our $VERSION = 0.33;
+our $VERSION = 0.34;
 
 1;
 __END__
