@@ -2,6 +2,7 @@
  * lib/Mail/DKIM/Algorithm/*, lib/Mail/DKIM/Canonicalization/*,
    lib/Mail/DKIM/Signature.pm, t/verifier.t: remove support and tests
    for the prestandardized DKIM signatures (issue #1871948)
+ * Makefile.PL: bump version
 
  -- VERSION 0.33 --
 
